Make sure the vertical scrollbar is not shown for posts

--- a/css/index.css
+++ b/css/index.css
@@ -9529,6 +9529,7 @@ dl.stats.half_content {
 }
 .post > .inner {
   overflow-x: auto;
+  overflow-y: visible;
 }
 
 .signature, .attachments {
